--- a/css/styles.css
+++ b/css/styles.css
@@ -759,11 +759,50 @@ img {
 
   color: var(--main-color);
 }
+/* back */
 .backdrop {
   position: fixed;
+
   top: 0;
   left: 0;
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background-color: #ffffff;
+}
+.backdrop-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+
+  margin-top: 8px;
+  margin-right: 8px;
+  cursor: pointer;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+}
+
+.backdrop-svg {
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
