--- a/css/styles.css
+++ b/css/styles.css
@@ -316,10 +316,31 @@ a {
   display: flex;
 }
 .work-item {
+  position: relative;
   margin-right: 30px;
 }
 .work-item:last-child {
   margin-right: 0;
+}
+.work-model {
+  position: absolute;
+
+  bottom: 0;
+  left: 0;
+  height: 70px;
+  width: 100%;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.work-model-text {
+  margin-top: 27px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
 }
 /* team section */
 .team {
