--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ a {
   height: 3px;
 
   left: 0;
-  bottom: 0;
+  bottom: -1px;
 
   border-radius: 2px;
   background-color: var(--blue-color);
@@ -471,8 +471,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 170px;
+  height: 92px;
 }
 .customers-link:hover {
   border: 1px solid var(--blue-color);
@@ -480,8 +480,8 @@ a {
 .customers-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--customers-color);
-  width: 170px;
-  height: 92px;
+  width: 106px;
+  height: 60px;
 }
 .customers-link:hover .customers-icon {
   fill: var(--blue-color);
@@ -784,6 +784,9 @@ img {
 .backdrop {
   position: fixed;
 
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   top: 0;
   left: 0;
   width: 100%;
@@ -803,7 +806,12 @@ img {
   width: 528px;
   height: 581px;
 
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
   background-color: #ffffff;
+
+  border-radius: 4px;
 }
 .backdrop-btn {
   position: absolute;
