--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ a {
   overflow: hidden;
 }
 /* header */
+
 .conteiner {
   width: 1200px;
 
@@ -91,8 +92,10 @@ a {
 
   color: #212121;
 }
-.top-nav:hover,
-:focus {
+.top-nav:hover {
+  color: var(--blue-color);
+}
+.top-nav:focus {
   color: var(--blue-color);
 }
 .nav-main {
@@ -497,6 +500,10 @@ a {
 
   background: #2f303a;
 }
+.flex-box {
+  display: flex;
+  align-items: baseline;
+}
 .team-new-list {
   display: flex;
   align-items: baseline;
@@ -581,6 +588,73 @@ a {
 .team-new-links:focus {
   background-color: #2196f3;
 }
+.footer-email {
+  margin-left: 90px;
+}
+.footer-email-header {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
+.footer-input {
+  margin-top: 20px;
+  background-color: #2f303a;
+  color: #acacb0;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+}
+.footer-label {
+  margin-right: 8px;
+}
+.footer-input::placeholder {
+  font-size: 16px;
+  line-height: 20px;
+
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-submit {
+  cursor: pointer;
+  position: relative;
+  padding: 10px 28px 10px 10px;
+  width: 200px;
+  height: 50px;
+
+  background-color: var(--blue-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+}
+.footer-submit-svg {
+  position: absolute;
+
+  content: "";
+  width: 24px;
+  height: 24px;
+
+  display: block;
+
+  top: 50%;
+  right: 23px;
+  transform: translateY(-50%);
+
+  fill: #fff;
+}
+.footer-submit:hover {
+  background-color: var(--light-blue-color);
+}
+
 /*  */
 /*  */
 /*  */
@@ -798,6 +872,7 @@ img {
   pointer-events: none;
 }
 .modal {
+  padding: 40px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -824,14 +899,159 @@ img {
 
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+
   width: 30px;
   height: 30px;
   background-color: #fff;
 }
 
 .backdrop-svg {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   top: 50%;
   left: 0;
   width: 100%;
   height: 100%;
+}
+.backdrop-btn:hover .backdrop-svg {
+  fill: var(--blue-color);
+}
+.modal-form {
+  margin-top: 12px;
+}
+.modal-text {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.1;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+.modal-label {
+  position: relative;
+  font-size: 12px;
+  line-height: 14px;
+  /* identical to box height */
+
+  letter-spacing: 0.01em;
+  display: block;
+  margin-bottom: 10px;
+}
+.checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-input {
+  font-size: 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  border-radius: 4px;
+
+  width: 100%;
+  height: 40px;
+
+  padding: 0;
+  padding-left: 40px;
+  padding-right: 20px;
+  margin-top: 4px;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus {
+  outline: 1px solid var(--blue-color);
+}
+.modal-input:focus + svg {
+  fill: var(--blue-color);
+}
+
+.model-icon-box {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 50%;
+  margin-left: 12px;
+  display: block;
+  width: 18px;
+  height: 18px;
+}
+
+.ggg {
+  margin-bottom: 20px;
+  font-size: 12px;
+  min-height: 120px;
+  width: 448px;
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  border-radius: 4px;
+}
+.checkbox-text {
+  font-size: 14px;
+  line-height: 24px;
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+.checkbox-text {
+  visibility: hidden;
+}
+.checkbox-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.model-icon {
+  margin-left: -8px;
+  margin-right: 8px;
+  content: "";
+  width: 16px;
+  height: 15px;
+  border: 1px solid #212121;
+  border-radius: 2px;
+}
+.checkbox-text:checked + .model-icon {
+  background-color: var(--blue-color);
+  background-image: url(../images/svg/icon-check.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-origin: border-box;
+  border: 1px solid var(--blue-color);
+}
+.checkbox-link {
+  font-size: 14px;
+  line-height: 24px;
+
+  letter-spacing: 0.03em;
+  color: var(--blue-color);
+
+  text-decoration-line: underline;
+}
+
+.modal-btn {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+
+  width: 200px;
+  height: 50px;
+  padding: 10px 55px;
+
+  background-color: var(--blue-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: var(--light-blue-color);
+}
+.modal-input::placeholder {
+  font-size: 12px;
+  line-height: 1.1;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
 }
